feat: Implement SC Inventory system và tích hợp Parts Request workflow (#43)
- Tạo ProductsSparePartsTypeSC entity với auto-calculate stockStatus
- Implement SCInventoryService: getInventory, updateStock, useParts
- Tạo SCInventoryController với 3 REST endpoints
- Tích hợp SC inventory vào PartsRequestServiceImp.scAdminConfirmReceive()
- Tạo Use Parts API cho SC_TECHNICAL với DTOs tracking stock
- Fix Java 8 compatibility: toList() → collect(Collectors.toList())
- Fix field name bug: getScBranchOffice() → getBranchOffice()

Co-authored-by: Lê Minh Đức <154430738+LeMinhDuc192044@users.noreply.github.com>